--- a/Restaurants/restaurant1.html
+++ b/Restaurants/restaurant1.html
@@ -28,144 +28,152 @@
                        <i class="fa-solid fa-heart gris" aria-hidden="true"></i>
                     </div>
                 </div>                                        
-                <ul class="entrees">                    
+                <ul class="entrees" >                    
                     <h2 class="subtitle_lacarte">ENTRÉES</h2> 
                     <a href="#">             
                     <li class="menu">
-                        <div class="menuetprix">
-                            <div class="menu-txt">                            
+                        <article class="plats">
+                            <div class="menu-txt">
                                 <h3 class="titre_menus">Fricassées d'escargots</h3>
-                                <p class="subtitle_menus">Au piment d'espellette</p>
+                                <span class="accompagnement">Au piment d'espellette</span>
                             </div>
-                            <div class="prix"> 
-                                <p class="prix-txt">25€</p>                           
+                            <div class="validation"> 
+                                <p class="prix-txt">25€</p>
+                                <span class="vide"></span>
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                            <div class="check">                                                       
-                                <i class="fa-solid fa-check-circle"></i>                                    
-                            </div>
-                        </div>
-                    </li>                          
+                        </article>
+                    </li>             
                     <li class="menu">
-                        <div class="menuetprix">
+                        <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Foie gras de canard mi-cuit</h3>
-                                <p class="subtitle_menus">Et ses copeaux de truffe noire</p>
+                                <span class="accompagnement">Et ses copeaux de truffe noire</span>
                             </div>
-                            <div class="prix">
+                            <div class="validation"> 
                                 <p class="prix-txt">35€</p>
+                                <span class="vide"></span>
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                            <div class="check">                        
-                                <i class="fa-solid fa-check-circle"></i>
-                            </div>
-                        </div>
-                    </li>
+                        </article>
+                    </li>             
                     <li class="menu">
-                        <div class="menuetprix">
+                        <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Œuf au plat</h3>
-                                <p class="subtitle_menus">Assaisonné à la truffe sur lit de caviar</p>
+                                <span class="accompagnement">Assaisonné à la truffe sur lit de caviar</span>
                             </div>
-                            <div class="prix">
+                            <div class="validation"> 
                                 <p class="prix-txt">20€</p>
+                                <span class="vide"></span>
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                            <div class="check">
-                                <i class="fa-solid fa-check-circle"></i>
-                            </div>
-                        </div>
-                    </li>
+                        </article>
+                    </li>             
                 </ul>                                                     
-                <ul class="plats">                    
+                <ul class="plates">                    
                     <h2 class="subtitle_lacarte">PLATS</h2>
                     <li class="menu">
-                        <div class="menuetprix">
-                            <div class="menu-txt"> 
+                        <article class="plats">
+                            <div class="menu-txt">
                                 <h3 class="titre_menus">Filet de bœuf aux herbes</h3>
-                                <p class="subtitle_menus">Accompagné de sa ribambelle de légumes</p>
+                                <span class="accompagnement">Accompagné de sa ribambelle de légumes</span>
                             </div>
-                            <div class="prix">
+                            <div class="validation"> 
                                 <p class="prix-txt">40€</p>
+                                <span class="vide"></span>
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                            <div class="check">
-                                <i class="fa-solid fa-check-circle"></i>
-                            </div>
-                        </div>
-                    </li>
+                        </article>
+                    </li>             
                     <li class="menu">
-                        <div class="menuetprix">
+                        <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Parmentier de queue de bœuf</h3>
-                                <p class="subtitle_menus">À la truffe noire sur sa purée de panais</p>
+                                <span class="accompagnement">À la truffe noire sur sa purée de panais</span>
                             </div>
-                            <div class="prix">
+                            <div class="validation"> 
                                 <p class="prix-txt">35€</p>
-                            </div>                                                                           
-                            <div class="check">                       
-                                <i class="fa-solid fa-check-circle"></i>
+                                <span class="vide"></span>
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                        </div>                        
-                    </li>
+                        </article>
+                    </li>             
                     <li class="menu">
-                        <div class="menuetprix">
+                        <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Filet de turbot</h3>
-                                <p class="subtitle_menus">Aux agrumes</p>
+                                <span class="accompagnement">Aux agrumes</span>
                             </div>
-                            <div class="prix">
+                            <div class="validation"> 
                                 <p class="prix-txt">44€</p>
-                            </div>                                                                           
-                            <div class="check">                       
-                                <i class="fa-solid fa-check-circle"></i>
+                                <span class="vide"></span>
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                        </div>                        
-                    </li>
+                        </article>
+                    </li>             
                 </ul>
                 <ul class="desserts">                    
                     <h2 class="subtitle_lacarte">DESSERTS</h2>                    
                     <li class="menu">
-                        <div class="menuetprix">
+                        <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Paris-Brest</h3>
-                                <p class="subtitle_menus">Revisité</p>
+                                <span class="accompagnement">Revisité</span>
                             </div>
-                            <div class="prix">
-                                <p class="prix-txt">18€</p>
-                            </div>                                                                            
-                            <div class="check">                        
-                                <i class="fa-solid fa-check-circle"></i>
-                            </div>
-                        </div>                        
-                    </li>
-                    <li class="menu">
-                        <div class="menuetprix">
-                            <div class="menu-txt">
-                                <h3 class="titre_menus">Macaron au chocolat d'exception</h3>
-                                <p class="subtitle_menus">Et glace à la vanille de Madagascar</p>
-                            </div>
-                            <div class="prix">
+                            <div class="validation"> 
                                 <p class="prix-txt">22€</p>
-                            </div>                                                                           
-                            <div class="check">                       
-                                <i class="fa-solid fa-check-circle"></i>
+                                <span class="vide"></span>
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                        </div>                        
-                    </li>
+                        </article>
+                    </li>             
                     <li class="menu">
-                        <div class="menuetprix">
+                        <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Mousse au chocolat </h3>
-                                <p class="subtitle_menus">Au piment d'Espelette et à la truffe noire</p>
+                                <h3 class="titre_menus">Macaron au chocolat d'exception  </h3>
+                                <span class="accompagnement">Et glace à la vanille de Madagascar</span>
                             </div>
-                            <div class="prix">
+                            <div class="validation"> 
+                                <p class="prix-txt">22€</p>
+                                <span class="vide"></span>
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
+                            </div>
+                        </article>
+                    </li>             
+                    <li class="menu">
+                        <article class="plats">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Mousse au chocolat</h3>
+                                <span class="accompagnement">Au piment d'Espelette et à la truffe noire</span>
+                            </div>
+                            <div class="validation"> 
                                 <p class="prix-txt">23€</p>
-                            </div>                                                                           
-                            <div class="check">                        
-                                <i class="fa-solid fa-check-circle"></i>
+                                <span class="vide"></span>
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                        </div>                        
-                    </li>
+                        </article>
+                    </li>             
                     </a>
                 </ul>
-
                 <div class="commander">
                     <a href="#">                       
                     <button disabled="" class="searchbutton" value="rechercher">
